-- encoding: UTF-8
name:            Falderal
version:         0.4
cabal-version:   >= 1.8
build-type:      Simple
license:         BSD3
category:        Testing
author:          Chris Pressey <cpressey@gmail.com>
maintainer:      Chris Pressey <cpressey@gmail.com>
stability:       alpha
tested-with:     GHC == 6.12.1
synopsis:        Framework for running and formatting literate test suites
homepage:        http://catseye.tc/projects/falderal/
bug-reports:     https://bitbucket.org/catseye/falderal/issues
description:
    Falderal is a file format for literate test suites.  It is particularly
    suited for documenting programming languages (or other specifications of
    ways to transform text) and testing their implementation(s) in a
    language-agnostic fashion.  Test.Falderal is a reference implementation,
    written in Haskell, of tools for formatting and running Falderal tests.

library
  build-depends: base >= 4.0, haskell98
  exposed-modules: Test.Falderal.Runner
                   Test.Falderal.Common
                   Test.Falderal.Loader
                   Test.Falderal.Partitioner
                   Test.Falderal.Formatter
                   Test.Falderal.Reporter
  other-modules:   Test.Falderal.Formatter.Identity
                   Test.Falderal.Formatter.Haskell
                   Test.Falderal.Formatter.Shell
                   Test.Falderal.Formatter.Markdown
                   Test.Falderal.Reporter.Standard
                   Test.Falderal.Reporter.FailureDump

executable falderal
  main-is:        falderal.hs
  build-depends:  base >= 4.0, haskell98
  other-modules:  Test.Falderal.Common
                  Test.Falderal.Loader
                  Test.Falderal.Partitioner
                  Test.Falderal.Runner
                  Test.Falderal.Formatter
                  Test.Falderal.Reporter.Standard

source-repository head
  type:     mercurial
  location: https://bitbucket.org/catseye/falderal
