[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Falderal"
version = "0.14"
authors = [
    { name="Chris Pressey", email="packages@catseye.tc" },
]
urls = { website="https://catseye.tc/node/Falderal" }
description = "Falderal: literate testing for programming languages"
readme = "README.md"
license = { file="LICENSE" }
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Testing",
]
requires-python = ">=2.7, >=3.5"

[project.scripts]
falderal = "falderal.driver:sys_main"
